--- a/DllHookProc/DllHookProc.vcxproj
+++ b/DllHookProc/DllHookProc.vcxproj
@@ -72,19 +72,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>..\HotKeySetter\bin\Debug</OutDir>
+    <OutDir>C:\Users\31129\Desktop\vs相关文件\HotKeySetter\HotKeySetter\bin\Debug</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>C:\Users\31129\Desktop\vs相关文件\HotKeySetter\HotKeySetter\bin\x86\Release</OutDir>
+    <OutDir>C:\Users\31129\Desktop\vs相关文件\HotKeySetter\HotKeySetter\bin\Debug</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>..\HotKeySetter\bin\Debug</OutDir>
+    <OutDir>C:\Users\31129\Desktop\vs相关文件\HotKeySetter\HotKeySetter\bin\Debug</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>C:\Users\31129\Desktop\vs相关文件\HotKeySetter\HotKeySetter\bin\x86\Release</OutDir>
+    <OutDir>C:\Users\31129\Desktop\vs相关文件\HotKeySetter\HotKeySetter\bin\Debug</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
